--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "morgan": "^1.10.0",
     "slugify": "^1.6.6",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.2",
     "validator": "^13.11.0"
   },
   "devDependencies": {
@@ -54,7 +53,8 @@
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.4.2"
   },
   "engines": {
     "node": ">=20.10.0"
