--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:prod": "NODE_ENV=production nodemon --watch 'src/**/*.ts' --exec 'ts-node' server.ts",
     "start-dev-server": "nodemon --watch 'src/**/*.ts' --watch 'server.ts' --watch '.env' --exec 'ts-node' server.ts",
     "lint": "eslint 'src/**/*.ts'",
-    "format": "prettier --config .prettierrc --write 'src/**/*.ts' 'dev-data/data/**/*.json' 'server.ts'",
+    "format": "prettier --config .prettierrc --write 'src/**/*.ts' 'server.ts'",
     "debug": "tsc --watch & nodemon --inspect-brk=9226 --ext js,html /dist/index.js",
     "test": "jest"
   },
@@ -22,11 +22,13 @@
   "author": "ameenkp",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.2",
+    "express-session": "^1.18.0",
+    "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "slugify": "^1.6.6",
     "ts-node": "^10.9.1",
     "validator": "^13.11.0"
@@ -35,10 +37,17 @@
     "@types/jest": "^29.5.10",
     "@types/morgan": "^1.9.9",
     "@types/validator": "^13.11.7",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.10.0",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "concurrently": "^8.2.2",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
