--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.2.1",
@@ -34,16 +35,16 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.10",
-    "@types/morgan": "^1.9.9",
-    "@types/validator": "^13.11.7",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/jest": "^29.5.10",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "concurrently": "^8.2.2",
