--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.2.1",
@@ -31,6 +32,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "slugify": "^1.6.6",
+    "socket.io": "^4.7.4",
     "ts-node": "^10.9.1",
     "validator": "^13.11.0"
   },
@@ -44,6 +46,7 @@
     "@types/node": "^20.10.0",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/socket.io": "^3.0.2",
     "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
