--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:prod": "NODE_ENV=production nodemon --watch 'src/**/*.ts' --exec 'ts-node' server.ts",
     "start-dev-server": "nodemon --watch 'src/**/*.ts' --watch 'server.ts' --watch '.env' --exec 'ts-node' server.ts",
     "lint": "eslint 'src/**/*.ts'",
-    "format": "prettier --config .prettierrc --write 'src/**/*.ts' 'server.ts'",
+    "format": "prettier --config .prettierrc --write 'src/**/*.ts' 'server.ts' '__tests__/**/*.ts'",
     "debug": "tsc --watch & nodemon --inspect-brk=9226 --ext js,html /dist/index.js",
     "test": "jest"
   },
@@ -22,6 +22,7 @@
   "author": "ameenkp",
   "license": "ISC",
   "dependencies": {
+    "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -35,18 +36,21 @@
     "passport-local": "^1.0.0",
     "slugify": "^1.6.6",
     "socket.io": "^4.7.4",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/formidable": "^3.4.5",
-    "@types/jest": "^29.5.10",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/mongoose-mock": "^0.4.38",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
     "@types/passport": "^1.0.16",
@@ -68,10 +72,12 @@
     "eslint-plugin-promise": "^6.1.1",
     "formidable": "^3.5.1",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.6",
+    "mongoose-mock": "^0.4.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.1.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.2"
   },
