--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   mongodb:
     image: mongo:latest
-    container_name: my-mongodb
+    container_name: mongodb-container-local
     restart: always
     ports:
       - "27017:27017"
@@ -19,10 +19,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: inno-chatter-api
+    container_name: backend-container-local
     restart: always
     ports:
-      - "3005:3005"
+      - "8000:8000"
     depends_on:
       - mongodb  # Ensure that the MongoDB container is running before starting the API
     environment:
@@ -31,11 +31,11 @@ services:
     networks:
       - my-network
 
-  react-frontend:
+  inno-chatter-app:
     build:
-      context: /Users/ameenkp/WebstormProjects/messenger-chat-app-frontend
+      context: /path/to/frontend-dockerfile
       dockerfile: Dockerfile
-    container_name: react-frontend
+    container_name: frontend-container-local
     restart: always
     ports:
       - "3001:3001"
