--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "format": "prettier --config .prettierrc --write 'src/**/*.ts' 'server.ts' '__tests__/**/*.ts'",
     "debug": "tsc --watch & nodemon --inspect-brk=9226 --ext js,html /dist/index.js",
     "test": "jest",
+    "coverage": "jest --coverage",
     "test:integration": "jest --config jest.integration.config.ts"
   },
   "keywords": [],
